# DisCODe

cmake/modules/: FindOpenCL.cmake
share/: DisCODeMacros.cmake
share/Tasks/: OpenClSegmentation.xml
src/Common/: CMakeLists.txt
src/Core/: ComponentFactory.hpp  ComponentManager.hpp
src/Processors/MSZ_OpenCL_Segmentaion/: CMakeLists.txt  GPUCode.cl  GPUImageProcessor.cpp  GPUImageProcessor.h  GPUTransferManager.cpp  GPUTransferManager.h  MSZ_OpenCL_Segmentation.cpp  MSZ_OpenCL_Segmentation.hpp  OpenClSegmentation.cl  WaterSegmentationPreProcessing.cpp  WaterSegmentationPreProcessing.h  WatershedSegmentation.cpp  WatershedSegmentation.h  timer.h
src/Proxies/Mrrocpp/: Mrrocpp_Proxy.hpp  headers.h
src/Tools/: regexfind.cpp
src/Types/Mrrocpp_Proxy/: PBReading.hpp
